--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "@radix-ui/react-tabs": "^1.1.1",
     "@react-oauth/google": "^0.12.1",
     "@shadcn/ui": "^0.0.4",
+    "@story-protocol/core-sdk": "^1.1.0-stable",
     "@tanstack/react-query": "^5.59.15",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "ipfs-http-client": "^60.0.1",
     "lucide-react": "^0.453.0",
+    "path-browserify": "^1.0.1",
     "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -38,7 +41,7 @@
     "tailwind-merge": "^2.5.4",
     "tailwindcss": "^3.4.14",
     "tailwindcss-animate": "^1.0.7",
-    "viem": "^2.21.29",
+    "viem": "^2.21.30",
     "wagmi": "^2.12.20",
     "zod": "^3.23.8"
   },
@@ -52,6 +55,8 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.9.0",
-    "vite": "^5.4.8"
+    "typescript": "^5.6.3",
+    "vite": "^5.4.8",
+    "vite-plugin-node-polyfills": "^0.22.0"
   }
 }
